# data-check

./: .gitignore  LICENSE  README.md
data-check-pyspark/: README.md  pyproject.toml
data-check-pyspark/data_check/: data_model_template.py
data-check-pyspark/data_check/dataframe/: check.py  data_model_check.py
data-check-pyspark/tests/: data_model_check_test.py  data_model_template_check_test.py  data_model_template_render_test.py  spark_utils.py
data-check-pyspark/tests/dataframe/: data_model_check_test.py
data-check-spark/: build.sbt
data-check-spark/src/main/scala/com/pawdon/datacheck/: DataModelCheck.scala
data-check-spark/src/main/scala/com/pawdonapi/datacheck/: DataModelCheck.scala
data-check-spark/src/main/scala/com/pawdonapi/datatestsspark/: DataModelCheck.scala
data-check-spark/src/test/scala/com/pawdon/datacheck/: DataModelCheckTest.scala  SparkSessionTestWrapper.scala
data-check-spark/src/test/scala/com/pawdonapi/datacheck/: DataModelCheckTest.scala  SparkSessionTestWrapper.scala
data-check-spark/src/test/scala/com/pawdonapi/datatestsspark/: DataModelCheckTest.scala  SparkSessionTestWrapper.scala
