[tool.poetry]
name = "data-check-pyspark"
version = "0.1.0"
description = ""
authors = ["Pawel Donath <pawdonapi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5.1"
pytest = "^8.2.0"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
